add html editor component. (ckeditor, wysiwyg, jodit, quill)

--- a/package.json
+++ b/package.json
@@ -3,12 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^35.2.1",
+    "@ckeditor/ckeditor5-alignment": "^35.2.1",
+    "@ckeditor/ckeditor5-autoformat": "^35.2.1",
+    "@ckeditor/ckeditor5-autosave": "^35.2.1",
+    "@ckeditor/ckeditor5-basic-styles": "^35.2.1",
+    "@ckeditor/ckeditor5-block-quote": "^35.2.1",
+    "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+    "@ckeditor/ckeditor5-ckfinder": "^35.2.1",
+    "@ckeditor/ckeditor5-dev-utils": "^31.1.3",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^31.1.3",
+    "@ckeditor/ckeditor5-editor-classic": "^35.2.1",
+    "@ckeditor/ckeditor5-essentials": "^35.2.1",
+    "@ckeditor/ckeditor5-export-pdf": "^35.2.1",
+    "@ckeditor/ckeditor5-font": "^35.2.1",
+    "@ckeditor/ckeditor5-heading": "^35.2.1",
+    "@ckeditor/ckeditor5-horizontal-line": "^35.2.1",
+    "@ckeditor/ckeditor5-image": "^35.2.1",
+    "@ckeditor/ckeditor5-indent": "^35.2.1",
+    "@ckeditor/ckeditor5-link": "^35.2.1",
+    "@ckeditor/ckeditor5-list": "^35.2.1",
+    "@ckeditor/ckeditor5-media-embed": "^35.2.1",
+    "@ckeditor/ckeditor5-paragraph": "^35.2.1",
+    "@ckeditor/ckeditor5-paste-from-office": "^35.2.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@ckeditor/ckeditor5-special-characters": "^35.2.1",
+    "@ckeditor/ckeditor5-table": "^35.2.1",
+    "@ckeditor/ckeditor5-typing": "^35.2.1",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.5",
+    "@mui/material": "^5.10.10",
+    "@mui/styles": "^5.10.10",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^12.5.0",
+    "babel-loader": "^8.2.5",
+    "draft-js": "^0.11.7",
+    "jodit-react": "^1.0.74",
+    "mui-rte": "^1.29.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "regenerator-runtime": "^0.13.10",
+    "styled-components": "^5.3.6",
+    "suneditor-react": "^2.16.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
